[gd_scene load_steps=9 format=3 uid="uid://yi5w2jbg0rcc"]

[ext_resource type="Script" path="res://Player/player_controller.gd" id="1_j451e"]
[ext_resource type="Texture2D" uid="uid://dyde0fr07wtor" path="res://Art/shadow.png" id="2_jwutx"]
[ext_resource type="Texture2D" uid="uid://3axmpw8hcxxl" path="res://Art/Old Man.png" id="3_evfdi"]
[ext_resource type="Texture2D" uid="uid://cd2vrn5yjxw8y" path="res://Art/player arm.png" id="3_rrio7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gs0k"]
size = Vector2(113.125, 287)

[sub_resource type="Animation" id="Animation_uany0"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_huyjt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc4ag"]
_data = {
"RESET": SubResource("Animation_huyjt"),
"walk": SubResource("Animation_uany0")
}

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_j451e")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 7.88)
texture = ExtResource("2_jwutx")
offset = Vector2(0, -4.8)

[node name="Weapons" type="Node" parent="."]

[node name="Unarmed" type="Sprite2D" parent="Weapons"]
position = Vector2(-3, -9)
scale = Vector2(0.555, 0.555)
texture = ExtResource("3_rrio7")
offset = Vector2(185, 0)
hframes = 5

[node name="Staff" type="Sprite2D" parent="Weapons"]
visible = false
position = Vector2(-3, -9)
scale = Vector2(0.555, 0.555)
texture = ExtResource("3_rrio7")
offset = Vector2(185, 0)
hframes = 5
frame = 3

[node name="Gun" type="Sprite2D" parent="Weapons"]
visible = false
position = Vector2(-3, -9)
scale = Vector2(0.555, 0.555)
texture = ExtResource("3_rrio7")
offset = Vector2(185, 0)
hframes = 5
frame = 1

[node name="Player" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.64, 0.64)
texture = ExtResource("3_evfdi")
hframes = 5

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-5.4375, 9.5)
shape = SubResource("RectangleShape2D_4gs0k")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="GroundMarker" type="Marker2D" parent="."]
position = Vector2(0, 153)

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2(4.57, 4.57)
metadata/isCurrent = false

[node name="FireLocation" type="Marker2D" parent="RayCast2D"]
position = Vector2(-8.68798e-05, 24)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xc4ag")
}
autoplay = "walk"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
